--- a/src/Win32Test/Win32Test.vcxproj.filters
+++ b/src/Win32Test/Win32Test.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\RenderSystem\ShaderProgramm.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.h">
@@ -84,6 +87,12 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="src\RenderSystem\ConstantBuffer.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\RenderSystem\ShaderProgramm.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\RenderSystem\ShaderCreateInfo.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
